@@ -1,3 +1,6 @@
+Jun 29, 2016 - chris ---------------------------------------------------
+o issue #80: fixed streamvbyte compilation for c++11
+
 Mar 20 2016 - chris ---------------------------------------------------
                       release of upscaledb-2.2.0
 
